# usb-sms-reader

./: .gitignore  AGENTS.md  README.md
android-app/: .gitignore  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/release/: output-metadata.json
android-app/app/release/baselineProfiles/0/: app-release.dm
android-app/app/release/baselineProfiles/1/: app-release.dm
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/smsreader/: SmsReaderApp.kt
android-app/app/src/main/java/com/smsreader/model/: SimCard.kt  SmsData.kt
android-app/app/src/main/java/com/smsreader/network/: NetworkClient.kt
android-app/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml
android-app/app/src/main/res/values-night/: themes.xml
android-app/app/src/main/res/xml/: accessibility_service_config.xml
docs/: TECHNICAL_ROADMAP.md
pc-server/: .gitignore  Cargo.toml  release.ps1
pc-server/config/: config.yaml
pc-server/release/: config.yaml
pc-server/src/: config.rs  error.rs  lib.rs  main.rs
pc-server/src/app/: command.rs  mod.rs  protocol.rs  state.rs  ui.rs
pc-server/src/classifier/: category.rs  mod.rs  rules.rs
pc-server/src/core/: adb.rs  device.rs  mod.rs  receiver.rs
pc-server/src/forwarder/: infopush.rs  message_builder.rs  mod.rs
pc-server/src/server/: mod.rs  tcp_server.rs
pc-server/src/storage/: mod.rs  models.rs  sqlite.rs
(+5 files in other folders)
