[package]
name = "usb-sms-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "tokio-rustls"] }
rusqlite = { version = "0.30", features = ["bundled"] }
config = "0.14"
serde_yaml = "0.9"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1"
anyhow = "1"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

egui = "0.29"
eframe = { version = "0.29", features = ["persistence", "glow"] }
egui_extras = { version = "0.29", features = ["all_loaders"] }

[dev-dependencies]
tokio-test = "0.4"